# car-price-prediction

./: .gitignore  README.md  pyproject.toml
demo/: rank.py
papers/: nn_paper.doc  siap_paper.doc
src/: scraper.py  utils.py  wrangle.py
src/classification_approach/: bounds.py  constants.py  nn.py  nn_.py  preliminary_classification.py  svm_.py
src/image/: conv_net.py  dataset.py  inference.py  model.py  preprocessing.py  training.py  utils.py
src/image/color_classifier/: model.py  net.py  training.py
src/image/model_files/: vocab.pt
src/image_color/: dataset.py  inference.py  preprocessing.py  training.py  utils.py
src/image_color/model_files/: model_state_dict.pt
src/image_price/: dataset.py  model.py  training.py
src/image_price/model_files/: vocab.pt
src/language_model/: dataset.py  model.py  preprocessing.py  training.py
src/models/: nn_.py  svm_.py  xgboost_.py
src/preprocessing/: model_mca.py  utils.py  wrangle.py
src/regression_approach/: eda.py  regression.py
